samples/flexvol-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <pod_name>
  labels:
    aadpodidbinding: <flexvol_selector>
spec:
  containers:
  - name: nginx-flex-kv
    image: nginx
    volumeMounts:
    - name: test
      mountPath: /kvmnt
      readOnly: true
  volumes:
  - name: test
    flexVolume:
      driver: "azure/kv"
      options:
        usepodidentity: "true"                    # [OPTIONAL] if not provided, will default to "false"
        usevmmanagedidentity: "true"              # [OPTIONAL new in version >= v0.0.15] if not provided, will default to "false"
        vmmanagedidentityclientid: ""             # [OPTIONAL new in version >= v0.0.15] use the client id to specify which user assigned managed identity to use, leave empty to use system assigned managed identity
        keyvaultname: "<kv_name>"                 # [REQUIRED] the name of the KeyVault
        keyvaultobjectnames: "<secret_name>"      # [REQUIRED] list of KeyVault object names (semi-colon separated)
        keyvaultobjecttypes: secret               # [REQUIRED] list of KeyVault object types: secret, key, cert
        keyvaultobjectversions: ""                # [OPTIONAL] list of KeyVault object versions (semi-colon separated), will get latest if empty
        resourcegroup: "<kv_rg>"                  # [REQUIRED for version < v0.0.14] the resource group of the KeyVault
        subscriptionid: "<sub_id>"                # [REQUIRED for version < v0.0.14] the subscription ID of the KeyVault
        tenantid: "<tenant_id>"                   # [REQUIRED] the tenant ID of the KeyVault
