samples/pythonsql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pythonsql
  namespace: default
spec:
  containers:
  - image: erjositoacr.azurecr.io/pythonsql:0.2
    imagePullPolicy: IfNotPresent
    name: pythonsql
