samples/kuard-ilb.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kuard-ilb
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: kuard-ilb
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard-ilb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "<ilb-subnet>"
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Local"
  ports:
  - port: 8080
  selector:
    app: kuard-alb
