samples/kuard-local.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Local"
  ports:
  - port: 8080
  selector:
    app: kuard
